--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -2482,6 +2482,15 @@
 
 			}
 
+/* Rest */
+	.rest {
+		text-align: center;
+		padding: 100px;
+		border-top: 3px solid white;
+		border-bottom: 3px solid white;
+		font-size: 16px;
+	}
+
 /* Spotlight */
 
 	.spotlight {
