--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -2488,7 +2488,9 @@
 		padding: 100px;
 		border-top: 3px solid white;
 		border-bottom: 3px solid white;
-		font-size: 16px;
+		font-size: 48px;
+		font-weight: bold;
+		text-transform: uppercase;
 	}
 
 /* Spotlight */
