--- a/assets/sass/libs/_vars.scss
+++ b/assets/sass/libs/_vars.scss
@@ -1,125 +1,54 @@
-///
-///	Spectral by HTML5 UP
-///	html5up.net | @n33co
-///	Free for personal and commercial use under the CCA 3.0 license (html5up.net/license)
-///
-
 // Misc.
 	$misc: (
-		max-spotlights:		10,
-		max-features:		10,
-		z-index-base:		10000
+		z-index-base:			10000,
+		max-wrapper-styles:		6
 	);
 
 // Duration.
 	$duration: (
-		transitions:		0.2s,
-		menu:				0.5s,
-		fadein:				3s
+		menu:					0.35s,
+		transition:				0.2s
 	);
 
 // Size.
 	$size: (
-		element-height:		2.75em,
-		element-margin:		2em,
-		letter-spacing:		0.075em,
-		letter-spacing-alt:	0.225em
+		border-radius:			5px,
+		element-height:			2.75em,
+		element-margin:			2em,
+		inner:					55em,
+		section-spacing:		(
+			large:				3em,
+			medium:				2em,
+			small:				1.75em
+		),
+		wrapper-edges:			(
+			large:				6.5em,
+			medium:				4.75em,
+			small:				2.5em
+		)
 	);
 
 // Font.
 	$font: (
-		family:				('Open Sans', Helvetica, sans-serif),
-		family-fixed:		('Courier New', monospace),
-		weight:				400,
-		weight-bold:		600,
-		weight-extrabold:	800
+		family:					('Source Sans Pro', Helvetica, sans-serif),
+		family-fixed:			('Courier New', monospace),
+		family-heading:			(Raleway, Helvetica, sans-serif),
+		weight:					300,
+		weight-bold:			600,
+		weight-heading:			200,
+		weight-heading-bold:	700,
+		kern-heading:			0.1em
 	);
 
 // Palette.
 	$palette: (
-		bg:					#2e3842,
-		fg:					#fff,
-		fg-bold:			#fff,
-		fg-light:			rgba(255,255,255,0.5),
-		border:				#fff,
-		border-bg:			rgba(144,144,144,0.25),
-		border2:			#fff,
-		border2-bg:			rgba(144,144,144,0.5),
-
-		accent1: (
-			bg:				#21b2a6,
-			fg-bold:		#ffffff,
-			fg:				mix(#21b2a6, #ffffff, 25%),
-			fg-light:		mix(#21b2a6, #ffffff, 40%),
-			border:			rgba(0,0,0,0.125),
-			border-bg:		rgba(255,255,255,0.075),
-			border2:		rgba(0,0,0,0.25),
-			border2-bg:		rgba(255,255,255,0.2)
-		),
-
-		accent2: (
-			bg:				#00ffcc,
-			fg-bold:		#ffffff,
-			fg:				mix(#00ffcc, #ffffff, 25%),
-			fg-light:		mix(#00ffcc, #ffffff, 40%),
-			border:			rgba(0,0,0,0.125),
-			border-bg:		rgba(255,255,255,0.075),
-			border2:		rgba(0,0,0,0.25),
-			border2-bg:		rgba(255,255,255,0.2)
-		),
-
-		accent3: (
-			bg:				#00f0ff,
-			fg-bold:		#ffffff,
-			fg:				mix(#00f0ff, #ffffff, 25%),
-			fg-light:		mix(#00f0ff, #ffffff, 40%),
-			border:			rgba(0,0,0,0.125),
-			border-bg:		rgba(255,255,255,0.075),
-			border2:		rgba(0,0,0,0.25),
-			border2-bg:		rgba(255,255,255,0.2)
-		),
-
-		accent4: (
-			bg:				#76ddff,
-			fg-bold:		#ffffff,
-			fg:				mix(#76ddff, #ffffff, 25%),
-			fg-light:		mix(#76ddff, #ffffff, 40%),
-			border:			rgba(0,0,0,0.125),
-			border-bg:		rgba(255,255,255,0.075),
-			border2:		rgba(0,0,0,0.25),
-			border2-bg:		rgba(255,255,255,0.2)
-		),
-
-		accent5: (
-			bg:				#505393,
-			fg-bold:		#ffffff,
-			fg:				mix(#505393, #ffffff, 25%),
-			fg-light:		mix(#505393, #ffffff, 40%),
-			border:			rgba(0,0,0,0.125),
-			border-bg:		rgba(255,255,255,0.075),
-			border2:		rgba(0,0,0,0.25),
-			border2-bg:		rgba(255,255,255,0.2)
-		),
-
-		accent6: (
-			bg:				#ed4933,
-			fg-bold:		#ffffff,
-			fg:				mix(#ed4933, #ffffff, 25%),
-			fg-light:		mix(#ed4933, #ffffff, 40%),
-			border:			rgba(0,0,0,0.125),
-			border-bg:		rgba(255,255,255,0.075),
-			border2:		rgba(0,0,0,0.25),
-			border2-bg:		rgba(255,255,255,0.2)
-		),
-
-		accent7: (
-			bg:				#ffffff,
-			fg-bold:		#2E3842,
-			fg:				#4E4852,
-			fg-light:		#8E8892,
-			border:			#dfdfdf,
-			border-bg:		rgba(0,0,0,0.0375),
-			border2:		#bfbfbf,
-			border2-bg:		rgba(0,0,0,0.1)
-		)
+		bg:						#2e3141,
+		fg:						#ffffff,
+		fg-bold:				#ffffff,
+		fg-light:				rgba(255,255,255,0.35),
+		border:					rgba(255,255,255,0.125),
+		border-bg:				rgba(255,255,255,0.025),
+		border2:				rgba(255,255,255,0.25),
+		border2-bg:				rgba(255,255,255,0.075),
+		accent:					#4c5c96
 	);
