--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -3063,13 +3063,13 @@
 				width: 2.25em;
 			}
 
-    #banner .logo img {
+    #banner .logo {
       box-shadow: 0 0 0 5px rgba(255, 255, 255, 0.1);
       border-radius: 50%;
       transition: box-shadow .3s cubic-bezier(0.250, 0.250, 0.000, 1.635);
     }
 
-    #banner .logo img:hover {
+    #banner .logo:hover {
       box-shadow: 0 0 0 10px rgba(255, 255, 255, 0.2);
     }
 
