--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -1,5 +1,5 @@
 @import url(font-awesome.min.css);
-@import url('https://fonts.googleapis.com/css?family=Exo+2:200');
+@import url('https://fonts.googleapis.com/css?family=Exo+2&subset=cyrillic');
 
 /*
 	Solid State by HTML5 UP
