--- a/css/style.css
+++ b/css/style.css
@@ -2539,6 +2539,10 @@ h4.panel-title a.collapsed:before {
 	 background: #3daccf;
 }
 
+.footer-social ul li a i.fa-slack:hover {
+	background: #58ba95;
+}
+
 /*-- Copyright --*/
 
 .copyright{
